--- a/package.json
+++ b/package.json
@@ -10,26 +10,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "i18next": "^23.2.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-i18next": "^13.0.1"
-  },
-  "devDependencies": {
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.2",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^4.0.0",
+    "i18next": "^23.2.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-i18next": "^13.0.1",
+    "sass": "^1.63.6",
+    "typescript": "^5.0.2",
+    "jest": "^29.5.0",
+    "vite": "^4.3.9"
+  },
+  "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
-    "@vitejs/plugin-react": "^4.0.0",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "jest": "^29.5.0",
-    "sass": "^1.63.6",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.0.2",
-    "vite": "^4.3.9"
+    "ts-jest": "^29.1.1"
   }
 }
